3.setup pv-pvc-metallb-traefik/yaml/dashboard.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefix.example.com`)
      kind: Rule
      middlewares :
        - name: nginx-basic-auth
      services:
        - name: api@internal
          kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-basic-auth
spec:
  basicAuth:
    secret: authsecret
